- Updated all localisation.
- Added Brazilian Portuguese localisation (thanks to Helvécio Mafra).
- Change URL with feed:// to http:// during refresh.
- Fix bug with expanding file:// path.
- Compare article titles case insensitively when looking for updates.
- Fix warning message for missing style.
- Add hidden preference to disable checking for updated articles.

2.1.0.2104
----------
- Update to Sparkle 1.1.
- Fix bug: preserved article is marked unread after folder reloaded.
- Fix bug: browser buttons were always enabled.
- Turn on manual sorting by default for new databases.
- When checking for new articles, include articles within 24 hours before last update,
  because feeds sometimes provide inaccurate dates.
- Assign new id to non-duplicate article with same id as existing article.
- Set our own last update date. Don't rely on the feed.
- Ensure that the article guid is truly unique between feeds.
  This fixes a bug where the wrong article was selected.
- Change browser address bar image into button.
- Re-enable Tiger-only features and eliminate warnings in log.
- Fix bug: don't rename when clicking on grayed-out folder.
- Show article list tab when clicking on folders list.
- Allow dragging of Trash folder.
- Don't re-sort article list after changing article's marked or read status.
- Truncate status bar text in the middle when it doesn't fit.
- Fix bug: articles with same title but different links were treated as the same.
- Fix bug: Deleted articles could be marked as updated.
- Standardize browser user agent string.
  This prevents a crash with the Flash Player plugin.
- Green icon for articles with updated article text.
- Improve handling of images with relative URLs.
- Patch from Peter Hosey: open article URL by drag and drop from article list to browser.
- Prevent crash with broken folder sort order (probably from earlier beta version).
- Remove hover:after element in Perlucida style to prevent WebKit crash in 10.3.9.